--- a/composer.json
+++ b/composer.json
@@ -47,6 +47,7 @@
         "drupal/core-recommended": "^8.8",
         "drupal/default_content": "^1.0@alpha",
         "drupal/devel": "^2.1",
+        "drupal/easy_breadcrumb": "^1.12",
         "drupal/emulsify": "^3.1",
         "drupal/entity_embed": "^1.0",
         "drupal/facets": "^1.4",
@@ -58,6 +59,7 @@
         "drupal/inline_entity_form": "^1.0@RC",
         "drupal/media_entity_browser": "^2.0",
         "drupal/menu_block": "^1.5",
+        "drupal/menu_breadcrumb": "^1.11",
         "drupal/menu_item_extras": "^2.8",
         "drupal/metatag": "^1.10",
         "drupal/migrate_devel": "^1.2@beta",
