--- a/config/sites/default/core.entity_view_display.node.location.default.yml
+++ b/config/sites/default/core.entity_view_display.node.location.default.yml
@@ -23,7 +23,6 @@ dependencies:
   module:
     - entity_reference_revisions
     - metatag
-    - telephone
     - text
     - user
 id: node.location.default
@@ -32,7 +31,7 @@ bundle: location
 mode: default
 content:
   field_location_body:
-    weight: 3
+    weight: 0
     label: above
     settings: {  }
     third_party_settings: {  }
@@ -40,28 +39,11 @@ content:
     region: content
   field_location_body_components:
     type: entity_reference_revisions_entity_view
-    weight: 0
+    weight: 2
     label: hidden
     settings:
       view_mode: default
       link: ''
-    third_party_settings: {  }
-    region: content
-  field_location_fax:
-    weight: 5
-    label: inline
-    settings:
-      title: ''
-    third_party_settings: {  }
-    type: telephone_link
-    region: content
-  field_location_image:
-    type: entity_reference_entity_view
-    weight: 1
-    label: hidden
-    settings:
-      view_mode: default
-      link: false
     third_party_settings: {  }
     region: content
   field_location_insurance:
@@ -71,16 +53,8 @@ content:
     third_party_settings: {  }
     type: text_default
     region: content
-  field_location_phone_number:
-    weight: 4
-    label: inline
-    settings:
-      title: ''
-    third_party_settings: {  }
-    type: telephone_link
-    region: content
   field_metatags:
-    weight: 6
+    weight: 3
     label: above
     settings: {  }
     third_party_settings: {  }
@@ -88,7 +62,7 @@ content:
     region: content
   field_services_ref:
     type: entity_reference_label
-    weight: 2
+    weight: 1
     region: content
     label: hidden
     settings:
@@ -101,9 +75,12 @@ hidden:
   field_location_card_desc: true
   field_location_card_image: true
   field_location_components: true
+  field_location_fax: true
   field_location_geo: true
   field_location_hours: true
   field_location_id: true
+  field_location_image: true
+  field_location_phone_number: true
   field_location_type: true
   links: true
   search_api_excerpt: true
