--- a/config/sites/default/migrate_plus.migration.towerhealth_insurance_groups.yml
+++ b/config/sites/default/migrate_plus.migration.towerhealth_insurance_groups.yml
@@ -10,7 +10,7 @@ class: null
 field_plugin_method: null
 cck_plugin_method: null
 migration_tags: null
-migration_group: null
+migration_group: towerhealth_provider_base_group
 label: 'Import tower health insurance group terms.'
 source:
   plugin: provider_insurance_group_terms
