--- a/config/sites/default/migrate_plus.migration.towerhealth_location_hours.yml
+++ b/config/sites/default/migrate_plus.migration.towerhealth_location_hours.yml
@@ -10,7 +10,7 @@ class: null
 field_plugin_method: null
 cck_plugin_method: null
 migration_tags: null
-migration_group: null
+migration_group: towerhealth_locations_group
 label: 'Import tower health location hours.'
 source:
   plugin: location_hours
