--- a/config/sites/default/migrate_plus.migration.towerhealth_providers_phone_number.yml
+++ b/config/sites/default/migrate_plus.migration.towerhealth_providers_phone_number.yml
@@ -10,7 +10,7 @@ class: null
 field_plugin_method: null
 cck_plugin_method: null
 migration_tags: null
-migration_group: null
+migration_group: towerhealth_provider_details_group
 label: 'Import tower health provider credentials'
 source:
   plugin: provider_phone_numbers
