only show media and content

--- a/config/sites/default/views.view.search.yml
+++ b/config/sites/default/views.view.search.yml
@@ -44,7 +44,7 @@ display:
           sort_asc_label: Asc
           sort_desc_label: Desc
           input_required: false
-          text_input_required: 'Select any filter and click on Apply to see results'
+          text_input_required: ''
           bef:
             general:
               allow_secondary: false
@@ -224,9 +224,7 @@ display:
             group_items: {  }
           parse_mode: terms
           min_length: null
-          fields:
-            - rendered_item
-            - title
+          fields: {  }
           plugin_id: search_api_fulltext
         search_api_datasource:
           id: search_api_datasource
@@ -329,6 +327,48 @@ display:
             group_items: {  }
           reduce_duplicates: false
           plugin_id: search_api_options
+        search_api_datasource_1:
+          id: search_api_datasource_1
+          table: search_api_index_acquia_search_index
+          field: search_api_datasource
+          relationship: none
+          group_type: group
+          admin_label: ''
+          operator: or
+          value:
+            'entity:media': 'entity:media'
+            'entity:node': 'entity:node'
+          group: 1
+          exposed: false
+          expose:
+            operator_id: ''
+            label: ''
+            description: ''
+            use_operator: false
+            operator: ''
+            operator_limit_selection: false
+            operator_list: {  }
+            identifier: ''
+            required: false
+            remember: false
+            multiple: false
+            remember_roles:
+              authenticated: authenticated
+            reduce: false
+          is_grouped: false
+          group_info:
+            label: ''
+            description: ''
+            identifier: ''
+            optional: true
+            widget: select
+            multiple: false
+            remember: false
+            default_group: All
+            default_group_multiple: {  }
+            group_items: {  }
+          reduce_duplicates: false
+          plugin_id: search_api_datasource
       sorts:
         search_api_relevance:
           id: search_api_relevance
