--- a/config/sites/default/search_api.index.acquia_search_index.yml
+++ b/config/sites/default/search_api.index.acquia_search_index.yml
@@ -3,35 +3,31 @@ langcode: en
 status: true
 dependencies:
   config:
-    - field.storage.node.field_location_geo
+    - field.storage.media.field_media_description
+    - field.storage.node.field_article_type_ref
     - field.storage.node.field_services_ref
     - field.storage.node.field_conditions_ref
     - field.storage.taxonomy_term.field_condition_synonym
-    - field.storage.node.field_location_type
     - field.storage.node.field_profile_gender
     - field.storage.node.field_insurance_ref
     - field.storage.taxonomy_term.field_insurance_company
-    - field.storage.node.field_profile_type
-    - field.storage.node.field_medical_specialties_ref
-    - field.storage.taxonomy_term.field_related_conditions_ref
-    - field.storage.media.field_media_description
     - field.storage.node.field_profile_languages
+    - field.storage.node.field_profile_last_name
     - field.storage.node.field_location_geo
-    - field.storage.node.field_location_id
     - field.storage.node.field_location_type
     - field.storage.node.field_location_ref
-    - field.storage.node.field_profile_type
-    - field.storage.node.field_article_type_ref
+    - field.storage.node.field_location_id
     - field.storage.node.field_medical_specialties_ref
     - field.storage.taxonomy_term.field_related_conditions_ref
-    - search_api.server.acquia_search_server
+    - field.storage.node.field_profile_type
+    - search_api.server.local_development
     - core.entity_view_mode.node.search_index
   module:
-    - search_api_location
-    - node
-    - taxonomy
-    - search_api_solr
     - media
+    - taxonomy
+    - node
+    - search_api_location
+    - search_api_solr
     - search_api
     - towerhealth_misc
 _core:
@@ -336,7 +332,7 @@ field_settings:
       module:
         - taxonomy
   video_description:
-    label: 'Video » Description'
+    label: 'Video Description'
     datasource_id: 'entity:media'
     property_path: field_media_description
     type: text
@@ -344,7 +340,7 @@ field_settings:
       config:
         - field.storage.media.field_media_description
   video_name:
-    label: 'Video » Name'
+    label: 'Video Name'
     datasource_id: 'entity:media'
     property_path: name
     type: text
