--- a/config/sites/default/core.entity_form_display.media.image.media_library.yml
+++ b/config/sites/default/core.entity_form_display.media.image.media_library.yml
@@ -4,6 +4,7 @@ status: true
 dependencies:
   config:
     - core.entity_form_mode.media.media_library
+    - field.field.media.image.field_image_type_ref
     - field.field.media.image.field_media_image
     - image.style.thumbnail
     - media.type.image
@@ -24,6 +25,7 @@ content:
     region: content
 hidden:
   created: true
+  field_image_type_ref: true
   name: true
   path: true
   status: true
