--- a/config/sites/default/core.entity_view_display.media.image.default.yml
+++ b/config/sites/default/core.entity_view_display.media.image.default.yml
@@ -3,6 +3,7 @@ langcode: en
 status: true
 dependencies:
   config:
+    - field.field.media.image.field_image_type_ref
     - field.field.media.image.field_media_image
     - media.type.image
   module:
@@ -12,6 +13,14 @@ targetEntityType: media
 bundle: image
 mode: default
 content:
+  field_image_type_ref:
+    weight: 1
+    label: above
+    settings:
+      link: true
+    third_party_settings: {  }
+    type: entity_reference_label
+    region: content
   field_media_image:
     weight: 0
     label: hidden
