--- a/config/sites/default/core.entity_view_display.media.image.homepage_hero.yml
+++ b/config/sites/default/core.entity_view_display.media.image.homepage_hero.yml
@@ -4,6 +4,7 @@ status: true
 dependencies:
   config:
     - core.entity_view_mode.media.homepage_hero
+    - field.field.media.image.field_image_type_ref
     - field.field.media.image.field_media_image
     - image.style.900x900
     - media.type.image
@@ -25,6 +26,7 @@ content:
     region: content
 hidden:
   created: true
+  field_image_type_ref: true
   name: true
   search_api_excerpt: true
   thumbnail: true
