--- a/docroot/modules/custom/towerhealth_msow_migration/config/install/migrate_plus.migration.towerhealth_doctor_images_media.yml
+++ b/docroot/modules/custom/towerhealth_msow_migration/config/install/migrate_plus.migration.towerhealth_doctor_images_media.yml
@@ -73,9 +73,12 @@ process:
       source: title
 
   field_profile_image:
-    plugin: towerhealth_doctor_images
-    source: image
-    name: first_name . ' ' . lastname
+    -
+      plugin: towerhealth_doctor_images
+      source: image
+    -
+      plugin: skip_on_empty
+      method: row
 
 destination:
   plugin: 'entity:node'
