--- a/config/sites/default/views.view.article_listing.yml
+++ b/config/sites/default/views.view.article_listing.yml
@@ -6,6 +6,7 @@ dependencies:
     - core.entity_view_mode.node.teaser
     - node.type.article
   module:
+    - datetime
     - node
     - user
 id: article_listing
@@ -149,21 +150,19 @@ display:
             operator_limit_selection: false
             operator_list: {  }
       sorts:
-        created:
-          id: created
-          table: node_field_data
-          field: created
-          order: DESC
-          entity_type: node
-          entity_field: created
-          plugin_id: date
+        field_article_date_value:
+          id: field_article_date_value
+          table: node__field_article_date
+          field: field_article_date_value
           relationship: none
           group_type: group
           admin_label: ''
+          order: DESC
           exposed: false
           expose:
             label: ''
-          granularity: second
+          granularity: day
+          plugin_id: datetime
         title:
           id: title
           table: node_field_data
