--- a/config/sites/default/migrate_plus.migration.towerhealth_locations.yml
+++ b/config/sites/default/migrate_plus.migration.towerhealth_locations.yml
@@ -15,47 +15,11 @@ migration_tags: null
 migration_group: towerhealth_locations_group
 label: 'Import tower health location content'
 source:
-  plugin: csv
+  plugin: locations
   path: 'public://directory/Find_Provider_Dir_Offices.txt'
-  delimiter: '|'
-  header_row_count: 1
-  ids:
-    - location_id
+  second_path: 'public://directory/Find_Provider_Dir_Practitioner_Offices.txt'
+  third_path: 'public://directory/Find_Provider_Dir_Practitioner_Office_Desig.txt'
   track_changes: true
-  fields:
-    -
-      name: location_id
-      label: 'Location ID'
-    -
-      name: office_name
-      label: Title
-    -
-      name: address_1
-      label: 'Address 1'
-    -
-      name: address_2
-      label: 'Address 2'
-    -
-      name: city
-      label: City
-    -
-      name: state
-      label: State
-    -
-      name: zip_code
-      label: Zip_Code
-    -
-      name: phone_number
-      label: 'Phone number'
-    -
-      name: office_contact
-      label: 'Office Contact'
-    -
-      name: handicap_access
-      label: 'Handicap Access'
-    -
-      name: fax_number
-      label: 'Fax number'
 process:
   title:
     -
