--- a/config/sites/default/core.entity_form_display.media.image.media_library.yml
+++ b/config/sites/default/core.entity_form_display.media.image.media_library.yml
@@ -16,17 +16,24 @@ bundle: image
 mode: media_library
 content:
   field_media_image:
-    weight: -50
+    weight: 1
     settings:
       progress_indicator: throbber
       preview_image_style: thumbnail
     third_party_settings: {  }
     type: image_image
     region: content
+  name:
+    type: string_textfield
+    weight: 0
+    region: content
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
 hidden:
   created: true
   field_image_type_ref: true
-  name: true
   path: true
   status: true
   uid: true
