--- a/config/sites/default/core.entity_form_display.media.video.media_library.yml
+++ b/config/sites/default/core.entity_form_display.media.video.media_library.yml
@@ -9,11 +9,37 @@ dependencies:
     - field.field.media.video.field_media_oembed_video
     - field.field.media.video.field_media_srt
     - media.type.video
+  module:
+    - file
+    - text
 id: media.video.media_library
 targetEntityType: media
 bundle: video
 mode: media_library
 content:
+  field_media_author:
+    type: string_textfield
+    weight: 1
+    region: content
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+  field_media_description:
+    type: text_textarea
+    weight: 2
+    region: content
+    settings:
+      rows: 5
+      placeholder: ''
+    third_party_settings: {  }
+  field_media_srt:
+    type: file_generic
+    weight: 3
+    region: content
+    settings:
+      progress_indicator: throbber
+    third_party_settings: {  }
   name:
     type: string_textfield
     settings:
@@ -24,10 +50,7 @@ content:
     region: content
 hidden:
   created: true
-  field_media_author: true
-  field_media_description: true
   field_media_oembed_video: true
-  field_media_srt: true
   path: true
   status: true
   uid: true
