--- a/config/sites/default/migrate_plus.migration.towerhealth_providers.yml
+++ b/config/sites/default/migrate_plus.migration.towerhealth_providers.yml
@@ -15,48 +15,9 @@ migration_tags: null
 migration_group: towerhealth_provider_base_group
 label: 'Import tower health provider content'
 source:
-  plugin: csv
+  plugin: doctors
   path: 'public://directory/Find_Provider_Dir_Practitioner.txt'
-  delimiter: '|'
-  header_row_count: 1
-  enclosure: '"'
-  ids:
-    - practioner_id
   track_changes: true
-  fields:
-    -
-      name: practioner_id
-      label: 'Practioner ID'
-    -
-      name: last_name
-      label: 'Last name'
-    -
-      name: first_name
-      label: 'First name'
-    -
-      name: middle_name
-      label: 'Middle name'
-    -
-      name: professional_title
-      label: 'Professional Title'
-    -
-      name: gender
-      label: Gender
-    -
-      name: app
-      label: APP
-    -
-      name: employment_status
-      label: 'Employment Status'
-    -
-      name: npi_id
-      label: 'NPI ID'
-    -
-      name: epic_id
-      label: Epic_Provider_Number
-    -
-      name: open_scheduling
-      label: 'Open scheduling'
 process:
   field_profile_practid: practioner_id
   field_profile_first_name:
