Disable geo coding on update.

--- a/config/sites/default/field.field.node.location.field_location_geo.yml
+++ b/config/sites/default/field.field.node.location.field_location_geo.yml
@@ -14,8 +14,9 @@ third_party_settings:
     weight: 0
     geocode_field: field_location_address
     reverse_geocode_field: ''
-    hidden: false
+    skip_not_empty_value: 1
     disabled: true
+    hidden: false
     plugins:
       - googlemaps
     dumper: wkt
