--- a/config/sites/default/migrate_plus.migration.towerhealth_providers_credentials.yml
+++ b/config/sites/default/migrate_plus.migration.towerhealth_providers_credentials.yml
@@ -15,6 +15,7 @@ label: 'Import tower health provider credentials'
 source:
   plugin: provider_credential_refs
   path: 'public://directory/Find_Provider_Dir_Practitioner_Credentials.txt'
+  track_changes: true
 process:
   nid:
     -
