--- a/config/sites/default/migrate_plus.migration.towerhealth_providers_hospital_aff.yml
+++ b/config/sites/default/migrate_plus.migration.towerhealth_providers_hospital_aff.yml
@@ -15,6 +15,7 @@ label: 'Import tower health provider hospital affiliations.'
 source:
   plugin: provider_hospital_aff
   path: 'public://directory/Find_Provider_Dir_Facilities.txt'
+  track_changes: true
 process:
   nid:
     -
