--- a/docroot/modules/custom/towerhealth_msow_migration/config/install/migrate_plus.migration.towerhealth_providers_phone_number.yml
+++ b/docroot/modules/custom/towerhealth_msow_migration/config/install/migrate_plus.migration.towerhealth_providers_phone_number.yml
@@ -15,6 +15,7 @@ source:
   # Full path to the file.
   path: 'public://directory/Find_Provider_Dir_Practitioner_Offices.txt'
   second_path: 'public://directory/Find_Provider_Dir_Practitioner_Office_Desig.txt'
+  track_changes: true
 
 destination:
   plugin: 'entity:node'
