--- a/config/sites/default/migrate_plus.migration.towerhealth_provider_specialties.yml
+++ b/config/sites/default/migrate_plus.migration.towerhealth_provider_specialties.yml
@@ -15,6 +15,7 @@ label: 'Import tower health clinical areas of interest taxonomy terms.'
 source:
   plugin: provider_specialties_term
   path: 'public://directory/Find_Provider_Dir_Practitioner_Specialties.txt'
+  track_changes: true
 process:
   vid:
     -
