--- a/config/sites/default/migrate_plus.migration.towerhealth_providers_locations.yml
+++ b/config/sites/default/migrate_plus.migration.towerhealth_providers_locations.yml
@@ -15,6 +15,7 @@ label: 'Import tower health provider location references'
 source:
   plugin: provider_location_refs
   path: 'public://directory/Find_Provider_Dir_Practitioner_Offices.txt'
+  track_changes: true
 process:
   nid:
     -
