--- a/docroot/modules/custom/towerhealth_msow_migration/config/install/migrate_plus.migration.towerhealth_insurance_company_terms.yml
+++ b/docroot/modules/custom/towerhealth_msow_migration/config/install/migrate_plus.migration.towerhealth_insurance_company_terms.yml
@@ -10,6 +10,7 @@ source:
   plugin: 'provider_insurance_terms'
   # Full path to the file.
   path: 'public://directory/Find_Provider_Dir_Practitioner_Insurance.txt'
+  track_changes: true
 
 process:
   vid:
