--- a/docroot/modules/custom/towerhealth_msow_migration/config/install/migrate_plus.migration.towerhealth_location_hours.yml
+++ b/docroot/modules/custom/towerhealth_msow_migration/config/install/migrate_plus.migration.towerhealth_location_hours.yml
@@ -14,6 +14,7 @@ source:
   plugin: 'location_hours'
   # Full path to the file.
   path: 'public://directory/Find_Provider_Dir_OfficeHours.txt'
+  track_changes: true
 
 destination:
   plugin: 'entity:node'
