--- a/docroot/modules/custom/towerhealth_msow_migration/config/install/migrate_plus.migration.towerhealth_providers_credentials.yml
+++ b/docroot/modules/custom/towerhealth_msow_migration/config/install/migrate_plus.migration.towerhealth_providers_credentials.yml
@@ -14,6 +14,7 @@ source:
   plugin: 'provider_credential_refs'
   # Full path to the file.
   path: 'public://directory/Find_Provider_Dir_Practitioner_Credentials.txt'
+  track_changes: true
 
 destination:
   plugin: 'entity:node'
