--- a/config/sites/default/migrate_plus.migration.towerhealth_special_interests.yml
+++ b/config/sites/default/migrate_plus.migration.towerhealth_special_interests.yml
@@ -13,21 +13,9 @@ migration_tags: null
 migration_group: towerhealth_provider_base_group
 label: 'Import tower health clinical areas of interest taxonomy terms.'
 source:
-  plugin: csv
+  plugin: provider_interests_term
   path: 'public://directory/Find_Provider_Dir_Special_Interests.txt'
-  delimiter: '|'
-  header_row_count: 1
-  enclosure: '"'
-  ids:
-    - id
   track_changes: true
-  fields:
-    -
-      name: id
-      label: 'Special interest ID'
-    -
-      name: interest
-      label: 'Special Interest'
 process:
   vid:
     -
