Adjust special interest migration.

--- a/config/sites/default/migrate_plus.migration.towerhealth_providers_special_interests.yml
+++ b/config/sites/default/migrate_plus.migration.towerhealth_providers_special_interests.yml
@@ -63,4 +63,6 @@ process:
       source: '@_area_of_interest'
 destination:
   plugin: 'entity:node'
+  overwrite_properties:
+    - field_area_interest_ref
 migration_dependencies: null
