--- a/docroot/modules/custom/towerhealth_msow_migration/towerhealth_msow_migration.services.yml
+++ b/docroot/modules/custom/towerhealth_msow_migration/towerhealth_msow_migration.services.yml
@@ -5,3 +5,9 @@ services:
       - { name: 'event_subscriber' }
     arguments:
       - '@event_dispatcher'
+  towerhealth_msow_migration.fieldsubscriber:
+      class: Drupal\towerhealth_msow_migration\EventSubscriber\FieldPostMigrationSubscriber
+      tags:
+        - { name: 'event_subscriber' }
+      arguments:
+        - '@event_dispatcher'
