--- a/config/sites/default/field.field.node.page.field_basic_components.yml
+++ b/config/sites/default/field.field.node.page.field_basic_components.yml
@@ -12,6 +12,7 @@ dependencies:
     - paragraphs.paragraphs_type.cta_banner
     - paragraphs.paragraphs_type.cta_list_banner
     - paragraphs.paragraphs_type.file_download_cta
+    - paragraphs.paragraphs_type.form
     - paragraphs.paragraphs_type.image_teaser_banner
     - paragraphs.paragraphs_type.patient_story
     - paragraphs.paragraphs_type.recognition_cards
@@ -44,6 +45,7 @@ settings:
       care_circle: care_circle
       rich_text: rich_text
       box_links: box_links
+      form: form
       image_teaser_banner: image_teaser_banner
       text_teaser_banner: text_teaser_banner
     target_bundles_drag_drop:
@@ -71,15 +73,15 @@ settings:
       patient_story:
         enabled: true
         weight: 17
+      article_card:
+        weight: 19
+        enabled: false
       recognition_card:
         weight: 19
         enabled: false
       cta_banner:
         enabled: true
         weight: 19
-      article_card:
-        weight: 19
-        enabled: false
       recognition_cards:
         enabled: true
         weight: 20
@@ -116,6 +118,9 @@ settings:
       video_card:
         weight: 38
         enabled: false
+      form:
+        enabled: true
+        weight: 41
       image_box_link_custom:
         weight: 43
         enabled: false
